adding bulb icon

--- a/src/app/keep/notes-start/notes-start.component.scss
+++ b/src/app/keep/notes-start/notes-start.component.scss
@@ -23,6 +23,12 @@
             font-size  : 2rem;
             font-weight: bold;
         }
+
+        .fa-lightbulb-o{
+            // font-size: 2rem;
+            margin-right: 15px;
+            color: goldenrod;
+        }
     }
 
     .right {
