--- a/src/app/keep/notes-start/notes-start.component.html
+++ b/src/app/keep/notes-start/notes-start.component.html
@@ -2,15 +2,13 @@
 <div class="container">
     <div class="heading">
         <div class="left">
-            <div class="title">KEEP Notes</div>
+            <div class="title"><i class="fa fa-lightbulb-o" aria-hidden="true"></i>KEEP Notes</div>
         </div>
         <div class="right">
             <div>
                 <input type="text" placeholder="search your notes..." [(ngModel)]="searchNoteInput">
                 <i class="fa fa-search" aria-hidden="true"></i>
             </div>
-            <div><i class="fa fa-external-link" aria-hidden="true"></i></div>
-            <div><i class="fa fa-times" aria-hidden="true"></i></div>
         </div>
     </div>
 
