--- a/src/app/keep/notes-start/notes-start.component.scss
+++ b/src/app/keep/notes-start/notes-start.component.scss
@@ -134,6 +134,12 @@
                 box-shadow   : rgba(0, 0, 0, 0.24) 0px 3px 8px;
             }
         }
+
+        .fa-thumb-tack.pinned{
+            color: #1a73e8;
+            transform: rotateZ(-90deg)
+        }        
+
     }
 
     .description textarea {
