fix for gray strip on top in books-challenge

--- a/src/app/books/books-list/books-list.component.scss
+++ b/src/app/books/books-list/books-list.component.scss
@@ -1,7 +1,7 @@
 .books-list-top{
     background: #fff;
     padding-bottom: 10px;
-    margin: 8px 2px;
+    // margin: 8px 2px;
     // border: 1px solid red;
     .list-heading, .search-book {
         margin: 0 auto;
